# advent-of-code-2023

./: Cargo.toml  README.md
src/: calendar.rs  mod.rs  structs.rs
src/calendar/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  dayxx.rs  jobs.rs
src/resource/: day01b.txt
src/structs/: bench_result.rs  bench_row.rs  result.rs  row.rs
src/traits/: solver.rs
