[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8.0"
took = "0.1.2"
enum-map = "2.7.3"
itertools = "0.12.0"
colored = "2.0.4"
tabled = { version = "*", features = ["color"] }

[lib]
name = "aoc_2023"
path = "src/lib.rs"

[[bin]]
name = "runner"
path = "bin/runner.rs"

[[bin]]
name = "benchmark"
path = "bin/benchmark.rs"
