[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8.0"
took = "0.1.2"
enum-map = "2.7.3"
itertools = "0.12.0"
colored = "2.0.4"
tabled = { version = "*", features = ["color"] }
regex = "1.10.2"
lazy_static = { version = "1.4.0", features = [] }
strum_macros = "0.25.3"
hashbrown = "0.14"
grid = "0.12.0"

[lib]
name = "aoc_2023"
path = "src/lib.rs"

[[bin]]
name = "run-all"
path = "bin/run-all.rs"

[[bin]]
name = "benchmark"
path = "bin/benchmark.rs"

[[bin]]
name = "run-last"
path = "bin/run-last.rs"
